src/pages/cart/Cart.module.css
.container {
    width: 100%;
    margin-top: 20px;
    margin: auto;
    display: flex;
    flex-direction: column;
    gap: 50px;
}

.itemHeading {
    width: 100%;
    text-align: center;
    margin: 20px 0;
    font-size: xx-large;
}

.count {
    width: 100%;
    text-align: center;
    font-size: x-large;
    margin-bottom: 30px;
}

.addRemove {
    display: flex;
    justify-content: center;
    align-items: center;
}

.itemImg {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.name {
    color: #3e3572;
    justify-content: space-between;
    display: flex;
    flex-direction: column;
    gap: 10px;
    align-items: center;
    width: 50%;
}

.name>p {
    font-size: larger;
    margin: 0 auto;
}

.unitPrice {
    display: flex;
    font-size: larger;
    font-weight: bold;
    gap: 10px;
    border-radius: 32px;
}

.unitPrice>p {
    margin: 0 auto;
}

.imgAndName {
    display: flex;
    gap: 5px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 75%;
    height: 85%;
}

.priceAndCount {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 10px;
    width: 20%;
}

.itemCard {
    display: flex;
    gap: 10px;
    width: 40vw;
    max-height: 300px;
    margin: auto;
    padding: 20px;
    background-color: lavender;
    border-radius: 12px;
    justify-content: center;
    align-items: center;
    height: 250px;
}

.removeItemButton {
    min-height: 30%;
    border-radius: 8px;
    padding: 5px;
    border: none;
    background-color: rgb(197, 197, 252);
    transition: background-color 150ms;
    color: rgb(44, 67, 67);
}

.removeItemButton:hover {
    background-color: rgb(152, 152, 248);
}

.checkoutDiv {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    font-size: x-large;
    margin: 20px 0px;
}

.checkoutLine {
    margin: 20px 20px;

}

.changeCountButton {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: x-large;
    font-weight: 400;
    width: 30px;
}

.itemCount {
    text-align: center;
    width: 20px;
}

.checkoutPrice {
    text-align: center;
    width: 100px;
}

@media all and (max-width:850px) {
    .itemCard {
        width: 80vw;
        height: fit-content;
    }

    .itemImg {
        height: 40%;
    }

    .name {
        gap: 0;
    }

    .imgAndName {
        width: 70%;
    }

    .priceAndCount {
        width: 30%;
        gap: 0;
    }
}

@media all and (max-width:550px) {}

